--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -29,7 +29,7 @@
 
 <script src="/dist/aspnet-validation.js"></script>
 <script>
-    const service = new aspnetValidation.ValidationService();
+    const service = new aspnetValidation.ValidationService(console);
     service.bootstrap();
 </script>
 </body>
