Add another form to demonstrate the problem

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -41,6 +41,25 @@
     </form>
 </fieldset>
 
+<fieldset>
+    <legend>Form 2</legend>
+    <form method="post">
+        <div class="form-field">
+            <label asp-for="Id"></label>
+            <input asp-for="Id"/>
+            <span asp-validation-for="Id"></span>
+        </div>
+
+        <div class="form-field">
+            <label asp-for="Control"></label>
+            <input asp-for="Control"/>
+            <span asp-validation-for="Control"></span>
+        </div>
+
+        <button type="submit" class="btn">Save</button>
+    </form>
+</fieldset>
+
 
 <script src="/dist/aspnet-validation.js"></script>
 <script>
