--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -60,6 +60,30 @@
     </form>
 </fieldset>
 
+<fieldset>
+    <legend>Form 3</legend>
+    <form method="post">
+        <div class="form-field">
+            <label asp-for="Input.SomeRequiredField"></label>
+            <input asp-for="Input.SomeRequiredField"/>
+            <span asp-validation-for="Input.SomeRequiredField"></span>
+        </div>
+        <button type="submit" class="btn">Save</button>
+    </form>
+</fieldset>
+
+<fieldset>
+    <legend>Form 4</legend>
+    <form method="post">
+        <div class="form-field">
+            <label asp-for="Input.SomeRequiredField"></label>
+            <input asp-for="Input.SomeRequiredField"/>
+            <span asp-validation-for="Input.SomeRequiredField"></span>
+        </div>
+        <button type="submit" class="btn">Save</button>
+    </form>
+</fieldset>
+
 
 <script src="/dist/aspnet-validation.js"></script>
 <script>
