Fixed validation messages.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -73,9 +73,9 @@
                        type="radio"
                        value="@color"
                        data-val="true"
-                       data-val-required="Please select at least one animal"
+                       data-val-required="Please select a color"
                        data-rule-required="true"
-                       data-msg-required="Please select at least one animal"
+                       data-msg-required="Please select a color"
                        @if (Model.SelectedColor == color) { <text>checked</text> } />
                 <label>@color</label>
             }
