Make sure input.form exists before accessing it
Fixes #47

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,6 +8,7 @@
 <ul>
     <li><a asp-page="Demos/Checkboxes">Checkboxes</a></li>
     <li><a asp-page="Demos/SubmitButton">Submit Button</a></li>
+    <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
