--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <h1>Other Demos</h1>
 <ul>
-    <li><a asp-page="Demos/Checkboxes">Checkboxes</a></li>
+    <li><a asp-page="Demos/Checkboxes">Checkboxes and Radio Buttons</a></li>
     <li><a asp-page="Demos/SubmitButton">Submit Button</a></li>
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
 </ul>
@@ -35,6 +35,8 @@
         </tr>
     </table>
 }
+
+<div asp-validation-summary="All"></div>
 
 <fieldset>
     <legend>Form 1</legend>
