--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     const service = new aspnetValidation.ValidationService(console);
     service.bootstrap(console.log);
 </script>
+@RenderSection("scripts", required: false)
 
 </body>
 </html>
