--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,6 +9,7 @@
     <li><a asp-page="Demos/Checkboxes">Checkboxes and Radio Buttons</a></li>
     <li><a asp-page="Demos/SubmitButton">Submit Button</a></li>
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
+    <li><a asp-page="Demos/SelectInput">Select Input and Validation Summary</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
