Add a formaction demo

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -10,6 +10,7 @@
     <li><a asp-page="Demos/SubmitButton">Submit Button</a></li>
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
     <li><a asp-page="Demos/SelectInput">Select Input and Validation Summary</a></li>
+    <li><a asp-page="Demos/FormAction">Form Action</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
