--- a/Pages/Demos/Checkboxes.cshtml
+++ b/Pages/Demos/Checkboxes.cshtml
@@ -15,6 +15,7 @@
     <legend>Required ASP.NET Checkboxes (with hidden input) and Radio buttons</legend>
 
     <form method="post">
+
         <div class="form-field">
             <p>
                 ASP.NET renders a checkbox and a hidden input for each boolean property.
@@ -30,6 +31,16 @@
             } else {
                 <em class="results">This is not checked</em>
             }
+        </div>
+
+        <div class="form-field">
+            <p>
+                One can also use the [Remote] validation attribute. In this case, the remote validator returns valid only when the checkbox is checked.
+            </p>
+            <label>Is checked
+                <input asp-for="InputRemote.IsCheckedRemote"/>
+            </label>
+            <span asp-validation-for="InputRemote.IsCheckedRemote"></span>
         </div>
 
         <div class="form-field">
@@ -101,6 +112,7 @@
         </div>
 
         <input type="submit" value="Submit"/>
+
     </form>
 </fieldset>
 
