Add simple disabled input demo

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,7 @@
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
     <li><a asp-page="Demos/SelectInput">Select Input and Validation Summary</a></li>
     <li><a asp-page="Demos/FormAction">Form Action</a></li>
+    <li><a asp-page="Demos/DisabledInputs">Disabled inputs</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
