Update Disabled Inputs demo to scan for changes

--- a/Pages/Demos/Checkboxes.cshtml
+++ b/Pages/Demos/Checkboxes.cshtml
@@ -124,3 +124,9 @@
     <a href="">Reset</a>
 }
 
+@section Scripts {
+    <script>
+        const service = new aspnetValidation.ValidationService(console);
+        service.bootstrap();
+    </script>
+}
