--- a/Pages/Demos/DisabledInputs.cshtml
+++ b/Pages/Demos/DisabledInputs.cshtml
@@ -17,15 +17,17 @@
             </p>
 
             <div class="form-control">
-                <label>Value 1 (disabled)
+                <label>Value 1 (<span id="Value1InputStatus"></span>)
                     <input asp-for="Value1" disabled="disabled" />
+                    <button id="Value1ToggleButton" type="button" onclick="toggleInput('Value1')"></button>
                     <span asp-validation-for="Value1"></span>
                 </label>
             </div>
 
             <div class="form-control my-1">
-                <label>Value 2 (not disabled)
+                <label>Value 2 (<span id="Value2InputStatus"></span>)
                     <input asp-for="Value2"/>
+                    <button id="Value2ToggleButton"  type="button" onclick="toggleInput('Value2')"></button>
                     <span asp-validation-for="Value2"></span>
                 </label>
             </div>
@@ -77,4 +79,26 @@
     </form>
 </fieldset>
 
+@section Scripts {
+    <script>
+        function toggleInput(inputId) {
+            const input = document.getElementById(inputId);
+            input.disabled = !input.disabled;
+            updateStatus(inputId);
+        }
 
+        function updateStatus(inputId) {
+            const input = document.getElementById(inputId);
+            const inputStatus = document.getElementById(`${inputId}InputStatus`);
+            const toggleButton = document.getElementById(`${inputId}ToggleButton`);
+            inputStatus.innerText = input.disabled ? 'disabled' : 'enabled';
+            toggleButton.innerText = input.disabled ? 'Enable' : 'Disable';
+        }
+
+        updateStatus('Value1');
+        updateStatus('Value2');
+
+        const service = new aspnetValidation.ValidationService(console);
+        service.bootstrap({ watch: true });
+    </script>
+}
