--- a/Pages/Demos/FormAction.cshtml
+++ b/Pages/Demos/FormAction.cshtml
@@ -18,3 +18,10 @@
     <input type="submit" value="Save" asp-page-handler="Save"/>
     <input type="submit" />
 </form>
+
+@section Scripts {
+    <script>
+        const service = new aspnetValidation.ValidationService(console);
+        service.bootstrap();
+    </script>
+}
