Add example of handling disabled/enabled with no watch

--- a/Pages/Demos/DisabledInputsWithWatch.cshtml
+++ b/Pages/Demos/DisabledInputsWithWatch.cshtml
@@ -1,5 +1,5 @@
 @page
-@model DemoWeb.Pages.Demos.DisabledInputs
+@model DemoWeb.Pages.Demos.DisabledInputsWithWatchPageModel
 
 @{
     Layout = "Shared/_Layout";
