--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,8 @@
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
     <li><a asp-page="Demos/SelectInput">Select Input and Validation Summary</a></li>
     <li><a asp-page="Demos/FormAction">Form Action</a></li>
-    <li><a asp-page="Demos/DisabledInputs">Disabled inputs</a></li>
+    <li><a asp-page="Demos/DisabledInputsWithWatch">Disabled inputs (<code>{watch: true}</code>)</a></li>
+    <li><a asp-page="Demos/DisabledInputsNoWatch">Disabled inputs (no watch)</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
