--- a/Pages/Demos/SubmitButton.cshtml
+++ b/Pages/Demos/SubmitButton.cshtml
@@ -11,7 +11,7 @@
     <form method="post">
         <div class="form-field">
             <p>
-                This simple test demonstrates that we ensure that submit buttons.
+                This simple test demonstrates that we ensure that submit button values are submitted.
             </p>
 
             <input type="submit" asp-for="SubmitButtonValue" value="Input Type Submit" />
