--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,6 +8,7 @@
 <ul>
     <li><a asp-page="Demos/Checkboxes">Checkboxes and Radio Buttons</a></li>
     <li><a asp-page="Demos/SubmitButton">Submit Button</a></li>
+    <li><a asp-page="Demos/SubmitButtonDownload">Submit Button with Download</a></li>
     <li><a asp-page="Demos/RemovedInputs">Removed Inputs</a></li>
     <li><a asp-page="Demos/SelectInput">Select Input and Validation Summary</a></li>
     <li><a asp-page="Demos/FormAction">Form Action</a></li>
