#97 delayed validation is now default behavior as per PR comments. Fixed a bug with data-val-event not being respected

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -14,7 +14,7 @@
     <li><a asp-page="Demos/FormAction">Form Action</a></li>
     <li><a asp-page="Demos/DisabledInputsWithWatch">Disabled inputs (<code>{watch: true}</code>)</a></li>
     <li><a asp-page="Demos/DisabledInputsNoWatch">Disabled inputs (no watch)</a></li>
-    <li><a asp-page="Demos/DelayedValidation">Delayed Validation</a></li>
+    <li><a asp-page="Demos/ImmediateValidation">Immediate Validation (<code>data-val-event="input"</code>)</a></li>
 </ul>
 
 @if (Model.StatusMessage != null) {
